hw3 | Refactors